archon-cluster/archon.xuperson.org/archon-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: archon
  labels:
    app.kubernetes.io/name: archon
    app.kubernetes.io/part-of: archon-cluster
